add header small change

--- a/scss/config/header/_header.scss
+++ b/scss/config/header/_header.scss
@@ -53,8 +53,8 @@ nav .inner ul li a {
     font-size: 1.3rem;
     padding: 1rem;
     text-decoration: none;
-    transition-duration: 0.2s;
-    font-family: 'Anton', sans-serif;
+    transition-duration: 0.5s;
+    font-family: 'Oswald', sans-serif;
 }
 
 nav .inner ul li a:hover {
