--- a/style.css
+++ b/style.css
@@ -168,4 +168,9 @@ nav .inner ul li a:hover {
     height: 45vh;
     font-size: 1rem;
   }
+}
+.hero {
+  width: 100%;
+  height: 90vh;
+  background-color: antiquewhite;
 }/*# sourceMappingURL=style.css.map */
