--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -2,4 +2,27 @@
     width: 100%;
     height: 90vh;
     background-color: antiquewhite;
+    overflow: hidden;
+    &__container {
+        width: 80%;
+        height: 100%;
+        margin:  auto;
+        background-color: aquamarine;
+        overflow: hidden;
+    }
+    &__content {
+        width: 100%;
+        height: 70%;
+        margin-top: 7%;
+        background-color: rgb(31, 77, 77);
+        &_subtitle {
+            font-size: 1.5rem;
+            font-family: 'Hind Siliguri', sans-serif;
+        }
+        &_title {
+            line-height: 80px;
+            font-size: 4rem;
+            font-family: 'Hind Siliguri', sans-serif;
+        }
+    }
 }
