--- a/style.css
+++ b/style.css
@@ -173,4 +173,27 @@ nav .inner ul li a:hover {
   width: 100%;
   height: 90vh;
   background-color: antiquewhite;
+  overflow: hidden;
+}
+.hero__container {
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  background-color: aquamarine;
+  overflow: hidden;
+}
+.hero__content {
+  width: 100%;
+  height: 70%;
+  margin-top: 7%;
+  background-color: rgb(31, 77, 77);
+}
+.hero__content_subtitle {
+  font-size: 1.5rem;
+  font-family: "Hind Siliguri", sans-serif;
+}
+.hero__content_title {
+  line-height: 80px;
+  font-size: 4rem;
+  font-family: "Hind Siliguri", sans-serif;
 }/*# sourceMappingURL=style.css.map */
