--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -4,7 +4,7 @@
     background-color: antiquewhite;
     overflow: hidden;
     &__container {
-        width: 80%;
+        width: 70%;
         height: 100%;
         margin:  auto;
         background-color: aquamarine;
@@ -20,9 +20,19 @@
             font-family: 'Hind Siliguri', sans-serif;
         }
         &_title {
-            line-height: 80px;
-            font-size: 4rem;
+            margin-top: -10px;
+            line-height: 90px;
+            font-size: 4.5rem;
             font-family: 'Hind Siliguri', sans-serif;
+            background-color: antiquewhite;
+        }
+        &_article {
+            display: block;
+            width: 65%;
+            margin-top: -20px;
+            background-color: aqua;
+        }
+        }
         }
     }
 }
