--- a/scss/config/header/_header.scss
+++ b/scss/config/header/_header.scss
@@ -7,7 +7,7 @@
     margin-left: 3%;
 }
 .header__logo--item {
-    color: rgb(0, 0, 0);
+    color: #3CB9FC;
 }
 
 
@@ -16,7 +16,7 @@
 nav {
     display: block;
     position: fixed;
-    background-color: #000000;
+    background-color: #8A2EBD;
     width: 250px;
     top: 0;
     left: -300px;
@@ -42,7 +42,6 @@ nav .inner ul {
 
 nav .inner ul li {
     margin: 0;
-    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 nav .inner ul li a {
@@ -56,7 +55,7 @@ nav .inner ul li a {
 }
 
 nav .inner ul li a:hover {
-    border-bottom: 1px solid #ff00ee ;
+    font-size: 1.4rem;
 }
 
 .sub__title {
@@ -81,7 +80,7 @@ nav .inner ul li a:hover {
     left: 0;
     width: 30px;
     height: 2px;
-    background-color: rgb(0, 0, 0);
+    background-color: #3CB9FC;
     transition: all 0.5s;
     border-radius: 4px;
 }
@@ -97,7 +96,7 @@ nav .inner ul li a:hover {
 }
 
 .open .toggle-btn span {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
 }
 
 .open .toggle-btn span:nth-child(1) {
