responsive design add

--- a/style.css
+++ b/style.css
@@ -186,6 +186,23 @@ nav .inner ul li a:hover {
   background-color: aliceblue;
 }
 
+@media screen and (max-width: 520px) {
+  .hero {
+    width: 100%;
+    height: 90vh;
+    overflow: hidden;
+  }
+  .hero__container {
+    width: 90%;
+    margin: 0 auto;
+    overflow: hidden;
+  }
+  .hero__content {
+    width: 100%;
+    height: 80%;
+    margin-top: 20%;
+  }
+}
 @namespace "http://www.w3.org/1999/xhtml";
 html {
   display: block;
