--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -17,3 +17,23 @@
         background-color: aliceblue;
     }
 }
+
+
+
+@media screen and (max-width: 520px) {
+    .hero {
+        width: 100%;
+        height: 90vh;
+        overflow: hidden;
+        &__container {
+            width: 90%;
+            margin: 0 auto;
+            overflow: hidden;
+        }
+        &__content {
+            width: 100%;
+            height: 80%;
+            margin-top: 20%;
+        }
+    }
+}
