--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -11,10 +11,30 @@
         background-color: aqua;
     }
     &__content {
+        display: block;
         width: 100%;
-        height: 70%;
+        height: 60%;
         margin-top: 10%;
+        overflow: hidden;
         background-color: aliceblue;
+        &_subtitle {
+            display: block;
+            width: 100%;
+            height: 50px;
+            font-size: 20px;
+            margin-top: 10px;
+            color: #3CB9FC;
+            font-family: 'Chakra Petch', sans-serif;
+        }
+        &_title {
+            display: block;
+            width: 100%;
+            font-size: 60px;
+            margin-top: -35px;
+            line-height: 130%;
+            font-family: 'Hind Siliguri', sans-serif;
+            background-color: aquamarine;
+        }
     }
 }
 
