hero area complete

--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -2,21 +2,18 @@
     width: 100%;
     height: 90vh;
     overflow: hidden;
-    background-color: antiquewhite;
     &__container {
-        width: 75%;
+        width: 65%;
         height: 100%;
         margin: 0 auto;
         overflow: hidden;;
-        background-color: aqua;
     }
     &__content {
         display: block;
         width: 100%;
-        height: 60%;
-        margin-top: 10%;
+        height: 100%;
+        margin-top: 13%;
         overflow: hidden;
-        background-color: aliceblue;
         &_subtitle {
             display: block;
             width: 100%;
@@ -29,11 +26,36 @@
         &_title {
             display: block;
             width: 100%;
-            font-size: 60px;
+            font-size: 70px;
             margin-top: -35px;
             line-height: 130%;
             font-family: 'Hind Siliguri', sans-serif;
-            background-color: aquamarine;
+            color: white;
+        }
+        &_article {
+            display: block;
+            width: 100%;
+            font-size: 16px;
+            line-height: 140%;
+            margin-top: -30px;
+            color: rgb(178, 178, 178);
+        }
+        &_button {
+            display: block;
+            width: 150px;
+            height: 50px;
+            margin-top: 50px;
+            cursor: pointer;
+            text-align: center;
+            background-color: #b437f268;
+            border: 1px solid #B537F2;
+            font-size: 15px;
+            width: 170px;
+            height: 60px;
+            line-height: 60px;
+            color: #3CB9FC;
+            font-family: 'Chakra Petch', sans-serif;
+            border-radius: 5px;
         }
     }
 }
