--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -79,7 +79,7 @@
         &_box {
             width: 1px;
             height: 150px;
-            background-color: #ffffff;
+            background-color: #3CB9FC;
             margin-left: 11px;
             margin-bottom: 0px;
         }
