--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ nav .inner ul li a:hover {
 .side__list_box {
   width: 1px;
   height: 150px;
-  background-color: #ffffff;
+  background-color: #3CB9FC;
   margin-left: 11px;
   margin-bottom: 0px;
 }
