--- a/style.css
+++ b/style.css
@@ -229,6 +229,11 @@ nav .inner ul li a:hover {
   font-family: "Chakra Petch", sans-serif;
   border-radius: 5px;
 }
+.hero__content_button:hover {
+  background-color: rgba(180, 55, 242, 0.6274509804);
+  color: #6dccff;
+  transition-duration: 500ms;
+}
 
 .side {
   position: absolute;
@@ -244,7 +249,6 @@ nav .inner ul li a:hover {
 .side__list_content {
   width: auto;
   margin-bottom: 10px;
-  color: white;
 }
 .side__list_box {
   width: 1px;
