--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -106,6 +106,26 @@
             width: 100%;
             height: 80%;
             margin-top: 20%;
+            &_subtitle {
+                font-size: 18px;
+            }
+            &_title {
+                display: block;
+                width: 100%;
+                font-size: 38px;
+                margin-top: -20px;
+                margin-bottom: 60px;
+                line-height: 130%;
+            }
+            &_article {
+                font-size: 15px;
+            }
+            &_button {
+                margin-top: 40px;
+            }
         }
+    }
+    .side {
+        display: none;
     }
 }
