--- a/style.css
+++ b/style.css
@@ -274,6 +274,26 @@ nav .inner ul li a:hover {
     height: 80%;
     margin-top: 20%;
   }
+  .hero__content_subtitle {
+    font-size: 18px;
+  }
+  .hero__content_title {
+    display: block;
+    width: 100%;
+    font-size: 38px;
+    margin-top: -20px;
+    margin-bottom: 60px;
+    line-height: 130%;
+  }
+  .hero__content_article {
+    font-size: 15px;
+  }
+  .hero__content_button {
+    margin-top: 40px;
+  }
+  .side {
+    display: none;
+  }
 }
 body {
   background-color: #120052;
