--- a/style.css
+++ b/style.css
@@ -295,6 +295,58 @@ nav .inner ul li a:hover {
     display: none;
   }
 }
+.about {
+  width: 100%;
+  height: 60vh;
+  margin-top: 15%;
+}
+.about__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+}
+.about__container__title {
+  width: 100%;
+  height: 10%;
+}
+.about__container__title_item {
+  color: white;
+  padding-left: 10px;
+  font-family: "Hind Siliguri", sans-serif;
+  font-size: 30px;
+}
+.about__container__title_span {
+  color: #3CB9FC;
+  font-family: "Chakra Petch", sans-serif;
+  font-size: 25px;
+  margin-right: 10px;
+}
+.about__container__main {
+  width: 100%;
+  height: 90%;
+  display: flex;
+  justify-content: space-around;
+}
+.about__container__main_left {
+  width: 45%;
+  height: 90%;
+  padding-top: 20px;
+}
+.about__container__main_left p {
+  font-size: 15px;
+  color: white;
+}
+.about__container__main_right {
+  width: 45%;
+  height: 100%;
+  padding-top: 40px;
+}
+.about__container__main_right img {
+  display: block;
+  margin: 0 auto;
+  width: 90%;
+}
+
 body {
   background-color: #120052;
 }
