--- a/scss/config/about/_about.scss
+++ b/scss/config/about/_about.scss
@@ -13,7 +13,7 @@
                 color: white;
                 padding-left: 10px;
                 font-family: 'Hind Siliguri', sans-serif;
-                font-size: 30px;
+                font-size: 33px;
             }
             &_span {
                 color: #3CB9FC;
@@ -42,8 +42,31 @@
                 padding-top: 40px;
                 & img {
                     display: block;
-                    margin: -0 auto;
+                    margin: 0% auto;
                     width: 90%;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 520px) {
+    .about {
+        width: 100%;
+        height: 135vh;
+        margin-top: -50%;
+        &__container {
+            width: 90%;
+            margin: 0 atuo;
+            &__main {
+                display: block;
+                &_left {
+                    width: 100%;
+                }
+                &_right {
+                    width: 100%;
+                    margin-top: -100%;
                 }
             }
         }
