--- a/scss/config/hero/_hero.scss
+++ b/scss/config/hero/_hero.scss
@@ -47,8 +47,7 @@
             margin-top: 50px;
             cursor: pointer;
             text-align: center;
-            background-color: #b437f268;
-            border: 1px solid #B537F2;
+            border: 2px solid #aa00ff;
             font-size: 15px;
             width: 170px;
             height: 60px;
@@ -95,7 +94,8 @@
 @media screen and (max-width: 520px) {
     .hero {
         width: 100%;
-        height: 90vh;
+        height: 100vh;
+        margin-top: -10%;
         overflow: hidden;
         &__container {
             width: 90%;
