--- a/style.css
+++ b/style.css
@@ -219,8 +219,7 @@ nav .inner ul li a:hover {
   margin-top: 50px;
   cursor: pointer;
   text-align: center;
-  background-color: rgba(180, 55, 242, 0.4078431373);
-  border: 1px solid #B537F2;
+  border: 2px solid #aa00ff;
   font-size: 15px;
   width: 170px;
   height: 60px;
@@ -261,7 +260,8 @@ nav .inner ul li a:hover {
 @media screen and (max-width: 520px) {
   .hero {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
+    margin-top: -10%;
     overflow: hidden;
   }
   .hero__container {
@@ -313,7 +313,7 @@ nav .inner ul li a:hover {
   color: white;
   padding-left: 10px;
   font-family: "Hind Siliguri", sans-serif;
-  font-size: 30px;
+  font-size: 33px;
 }
 .about__container__title_span {
   color: #3CB9FC;
@@ -343,10 +343,31 @@ nav .inner ul li a:hover {
 }
 .about__container__main_right img {
   display: block;
-  margin: 0 auto;
+  margin: 0% auto;
   width: 90%;
 }
 
+@media screen and (max-width: 520px) {
+  .about {
+    width: 100%;
+    height: 135vh;
+    margin-top: -50%;
+  }
+  .about__container {
+    width: 90%;
+    margin: 0 atuo;
+  }
+  .about__container__main {
+    display: block;
+  }
+  .about__container__main_left {
+    width: 100%;
+  }
+  .about__container__main_right {
+    width: 100%;
+    margin-top: -100%;
+  }
+}
 body {
   background-color: #120052;
 }
