add url and new article aboutarea

--- a/scss/config/about/_about.scss
+++ b/scss/config/about/_about.scss
@@ -33,6 +33,7 @@
                 padding-top: 20px;
                 & p {
                     font-size: 15px;
+                    line-height: 155%;
                     color: white;
                 }
             }
