all section made and section colums setup

--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -9,3 +9,18 @@
 
 // about 読み込み
 @forward "./about/index";
+
+// experience 読み込み
+@forward "./experience/index";
+
+// skills 読み込み
+@forward "./skills/index";
+
+// work 読み込み
+@forward "./work/index";
+
+// contact 読み込み
+@forward "./contact/index";
+
+// footer 読み込み
+@forward "./footer/index";
