--- a/style.css
+++ b/style.css
@@ -369,6 +369,70 @@ nav .inner ul li a:hover {
     margin-top: -100%;
   }
 }
+.experience {
+  width: 100%;
+  height: 100vh;
+  margin-top: 7%;
+  background-color: antiquewhite;
+}
+.experience__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+
+.skills {
+  width: 100%;
+  height: 100vh;
+  margin-top: 4%;
+  background-color: antiquewhite;
+}
+.skills__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+
+.work {
+  width: 100%;
+  height: 100vh;
+  margin-top: 4%;
+  background-color: antiquewhite;
+}
+.work__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+
+.contact {
+  width: 100%;
+  height: 100vh;
+  margin-top: 4%;
+  background-color: antiquewhite;
+}
+.contact__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+
+.footer {
+  width: 100%;
+  margin-top: 4%;
+  background-color: antiquewhite;
+}
+.footer__container {
+  width: 65%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: aqua;
+}
+
 body {
   background-color: #120052;
 }
