add chart basic atate

--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -46,5 +46,10 @@
                 background-color: aquamarine;
             }
         }
+        &__statearea {
+            width: 90%;
+            margin: 3% auto;
+            border: 1px solid white;
+        }
     }
 }
