--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -1,8 +1,7 @@
 .skills {
     width: 100%;
     height: 120vh;
-    margin-top: 8%;
-    background-color: antiquewhite;
+    margin-top: 10%;
     &__container {
         width: 70%;
         height: 100%;
@@ -28,7 +27,6 @@
             height: 10%;
             margin: 0 auto;
             margin-top: -30px;
-            background-color: rgb(98, 73, 39);
             &_item {
                 color: white;
                 font-size: 15px;
@@ -37,7 +35,7 @@
         &__chartarea {
             width: 33%;
             height: 30%;
-            margin-top: 2%;
+            margin-top: 5%;
             display: flex;
             justify-content: space-between;
             &_item {
@@ -47,9 +45,14 @@
             }
         }
         &__statearea {
-            width: 90%;
+            width: 95%;
             margin: 3% auto;
-            border: 1px solid white;
+            border: 1px dotted white;
+            &_item {
+                width: 95%;
+                margin: 2% auto;
+                color: rgb(173, 173, 173);
+            }
         }
     }
 }
