--- a/style.css
+++ b/style.css
@@ -385,8 +385,7 @@ nav .inner ul li a:hover {
 .skills {
   width: 100%;
   height: 120vh;
-  margin-top: 8%;
-  background-color: antiquewhite;
+  margin-top: 10%;
 }
 .skills__container {
   width: 70%;
@@ -414,7 +413,6 @@ nav .inner ul li a:hover {
   height: 10%;
   margin: 0 auto;
   margin-top: -30px;
-  background-color: rgb(98, 73, 39);
 }
 .skills__container__itemarea_item {
   color: white;
@@ -423,7 +421,7 @@ nav .inner ul li a:hover {
 .skills__container__chartarea {
   width: 33%;
   height: 30%;
-  margin-top: 2%;
+  margin-top: 5%;
   display: flex;
   justify-content: space-between;
 }
@@ -433,9 +431,14 @@ nav .inner ul li a:hover {
   background-color: aquamarine;
 }
 .skills__container__statearea {
-  width: 90%;
+  width: 95%;
   margin: 3% auto;
-  border: 1px solid white;
+  border: 1px dotted white;
+}
+.skills__container__statearea_item {
+  width: 95%;
+  margin: 2% auto;
+  color: rgb(173, 173, 173);
 }
 
 .work {
