--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -44,6 +44,20 @@
                 background-color: aquamarine;
             }
         }
+        &__chartmore {
+            width: 100%;
+            height: 15%;
+            display: flex;
+            margin-top: 2%;
+            justify-content: space-between;
+            &_item {
+                width: 33%;
+                height: 100%;
+                text-align: center;
+                color: rgb(173, 173, 173);
+                font-size: 12px;
+            }
+        }
         &__statearea {
             width: 95%;
             margin: 3% auto;
