--- a/style.css
+++ b/style.css
@@ -430,6 +430,20 @@ nav .inner ul li a:hover {
   width: 33%;
   background-color: aquamarine;
 }
+.skills__container__chartmore {
+  width: 100%;
+  height: 15%;
+  display: flex;
+  margin-top: 2%;
+  justify-content: space-between;
+}
+.skills__container__chartmore_item {
+  width: 33%;
+  height: 100%;
+  text-align: center;
+  color: rgb(173, 173, 173);
+  font-size: 12px;
+}
 .skills__container__statearea {
   width: 95%;
   margin: 3% auto;
