--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -1,6 +1,6 @@
 .skills {
     width: 100%;
-    height: 120vh;
+    height: 110vh;
     margin-top: 10%;
     &__container {
         width: 70%;
@@ -66,6 +66,33 @@
                 width: 95%;
                 margin: 2% auto;
                 color: rgb(173, 173, 173);
+            }
+        }
+    }
+}
+
+
+
+@media screen and (max-width: 520px) {
+    .skills {
+        width: 100%;
+        height: 300vh;
+        &__container {
+            width: 95%;
+            margin: 0- auto;
+            &__chartarea {
+                width: 100%;
+                height: 100vh;
+                display: block;
+                margin: 0 auto;
+                &_item {
+                    display: block;
+                    width: 100%;
+                    margin: 0 auto;
+                }
+            }
+            &__chartmore {
+                display: none;
             }
         }
     }
