--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -22,40 +22,22 @@
                 margin-right: 10px;
             }
         }
+        &__article {
+            width: 100%;
+            height: 20%;
+        }
+        &__chartarea {
+            width: 100%;
+            height: 50%;
+            background-color: aliceblue;
+        }
         &__itemarea {
             width: 95%;
             height: 10%;
             margin: 0 auto;
-            margin-top: -30px;
             &_item {
                 color: white;
                 font-size: 15px;
-            }
-        }
-        &__chartarea {
-            width: 33%;
-            height: 30%;
-            margin-top: 5%;
-            display: flex;
-            justify-content: space-between;
-            &_item {
-                display: block;
-                width: 33%;
-                background-color: aquamarine;
-            }
-        }
-        &__chartmore {
-            width: 100%;
-            height: 15%;
-            display: flex;
-            margin-top: 2%;
-            justify-content: space-between;
-            &_item {
-                width: 33%;
-                height: 100%;
-                text-align: center;
-                color: rgb(173, 173, 173);
-                font-size: 12px;
             }
         }
         &__statearea {
