--- a/style.css
+++ b/style.css
@@ -408,41 +408,23 @@ nav .inner ul li a:hover {
   font-size: 25px;
   margin-right: 10px;
 }
+.skills__container__article {
+  width: 100%;
+  height: 20%;
+}
+.skills__container__chartarea {
+  width: 100%;
+  height: 50%;
+  background-color: aliceblue;
+}
 .skills__container__itemarea {
   width: 95%;
   height: 10%;
   margin: 0 auto;
-  margin-top: -30px;
 }
 .skills__container__itemarea_item {
   color: white;
   font-size: 15px;
-}
-.skills__container__chartarea {
-  width: 33%;
-  height: 30%;
-  margin-top: 5%;
-  display: flex;
-  justify-content: space-between;
-}
-.skills__container__chartarea_item {
-  display: block;
-  width: 33%;
-  background-color: aquamarine;
-}
-.skills__container__chartmore {
-  width: 100%;
-  height: 15%;
-  display: flex;
-  margin-top: 2%;
-  justify-content: space-between;
-}
-.skills__container__chartmore_item {
-  width: 33%;
-  height: 100%;
-  text-align: center;
-  color: rgb(173, 173, 173);
-  font-size: 12px;
 }
 .skills__container__statearea {
   width: 95%;
