--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -23,13 +23,23 @@
             }
         }
         &__article {
-            width: 100%;
-            height: 20%;
+            width: 95%;
+            height: 10%;
+            margin: 0 auto;
+            &_item {
+                color: white;
+            }
         }
         &__chartarea {
             width: 100%;
             height: 50%;
-            background-color: aliceblue;
+            margin-top: 5%;
+            display: flex;
+            justify-content: space-between;
+            &_item {
+                width: 30%;
+                height: 100%;
+            }
         }
         &__itemarea {
             width: 95%;
