--- a/style.css
+++ b/style.css
@@ -409,13 +409,23 @@ nav .inner ul li a:hover {
   margin-right: 10px;
 }
 .skills__container__article {
-  width: 100%;
-  height: 20%;
+  width: 95%;
+  height: 10%;
+  margin: 0 auto;
+}
+.skills__container__article_item {
+  color: white;
 }
 .skills__container__chartarea {
   width: 100%;
   height: 50%;
-  background-color: aliceblue;
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.skills__container__chartarea_item {
+  width: 30%;
+  height: 100%;
 }
 .skills__container__itemarea {
   width: 95%;
