--- a/scss/config/work/_work.scss
+++ b/scss/config/work/_work.scss
@@ -4,9 +4,27 @@
     margin-top: 4%;
     background-color: antiquewhite;
     &__container {
-        width: 65%;
+        width: 70%;
         height: 100%;
         margin: 0 auto;
         background-color: aqua;
+        &__item1 {
+            width: 100%;
+            height: 10%;
+            display: flex;
+            justify-content: space-around;
+            background-color: rgb(143, 101, 47);
+            &_left {
+                width: 40%;
+                & img {
+                    width: 400px;
+                }
+            }
+            &_right {
+                display: block;
+                width: 45%;
+                background-color: aqua;
+            }
+        }
     }
 }
