--- a/style.css
+++ b/style.css
@@ -385,7 +385,6 @@ nav .inner ul li a:hover {
 .skills {
   width: 100%;
   height: 110vh;
-  margin-top: 10%;
 }
 .skills__container {
   width: 70%;
@@ -416,15 +415,31 @@ nav .inner ul li a:hover {
 .skills__container__article_item {
   color: white;
 }
-.skills__container__chartarea {
-  width: 100%;
+.skills__container__skills {
+  width: 80%;
   height: 50%;
-  margin-top: 5%;
+  margin: 0 auto;
+  background-color: aqua;
+  display: flex;
+}
+.skills__container__skills__area {
+  width: 30%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: antiquewhite;
+}
+.skills__container__skills__area_item {
+  width: 40%;
+  height: 10%;
+  margin: 0 auto;
+  background-color: rgb(6, 188, 2);
   display: flex;
   justify-content: space-between;
 }
-.skills__container__chartarea_item {
-  width: 25%;
+.skills__container__skills__area_item_number {
+  font-size: 2rem;
+  line-height: 100%;
+  color: rgb(255, 255, 255);
 }
 .skills__container__itemarea {
   width: 95%;
