--- a/scss/config/skills/_skills.scss
+++ b/scss/config/skills/_skills.scss
@@ -1,7 +1,6 @@
 .skills {
     width: 100%;
     height: 110vh;
-    margin-top: 10%;
     &__container {
         width: 70%;
         height: 100%;
@@ -30,14 +29,30 @@
                 color: white;
             }
         }
-        &__chartarea {
-            width: 100%;
+        &__skills {
+            width: 80%;
             height: 50%;
-            margin-top: 5%;
+            margin: 0 auto;
+            background-color: aqua;
             display: flex;
-            justify-content: space-between;
-            &_item {
-                width: 25%;
+            &__area {
+                width: 30%;
+                height: 100%;
+                margin: 0 auto;
+                background-color: antiquewhite;
+                &_item {
+                    width: 40%;
+                    height: 10%;               
+                    margin: 0 auto;
+                    background-color: rgb(6, 188, 2);
+                    display: flex;
+                    justify-content: space-between;
+                    &_number {
+                        font-size: 2rem;
+                        line-height: 100%;
+                        color: rgb(255, 255, 255);
+                    }
+                }
             }
         }
         &__itemarea {
