--- a/style.css
+++ b/style.css
@@ -417,8 +417,9 @@ nav .inner ul li a:hover {
 }
 .skills__container__skills {
   width: 80%;
-  height: 50%;
+  height: 35%;
   margin: 0 auto;
+  margin-bottom: 5%;
   background-color: aqua;
   display: flex;
 }
@@ -431,7 +432,7 @@ nav .inner ul li a:hover {
 .skills__container__skills__area_item {
   width: 40%;
   height: 10%;
-  margin: 0 auto;
+  margin: 20px auto;
   background-color: rgb(6, 188, 2);
   display: flex;
   justify-content: space-between;
