--- a/style.css
+++ b/style.css
@@ -419,21 +419,21 @@ nav .inner ul li a:hover {
   width: 80%;
   height: 35%;
   margin: 0 auto;
-  margin-bottom: 5%;
-  background-color: aqua;
   display: flex;
 }
 .skills__container__skills__area {
   width: 30%;
   height: 100%;
   margin: 0 auto;
-  background-color: antiquewhite;
+}
+.skills__container__skills__area_title {
+  color: white;
+  text-align: center;
 }
 .skills__container__skills__area_item {
   width: 40%;
   height: 10%;
   margin: 20px auto;
-  background-color: rgb(6, 188, 2);
   display: flex;
   justify-content: space-between;
 }
@@ -444,8 +444,9 @@ nav .inner ul li a:hover {
 }
 .skills__container__itemarea {
   width: 95%;
-  height: 10%;
-  margin: 0 auto;
+  height: 7%;
+  margin: 5% auto;
+  border: 1px dotted white;
 }
 .skills__container__itemarea_item {
   color: white;
