--- a/scss/config/about/_about.scss
+++ b/scss/config/about/_about.scss
@@ -1,7 +1,6 @@
 .about {
     width: 100%;
     height: 60vh;
-    margin-top: 10%;
     &__container {
         width: 65%;
         height: 100%;
@@ -12,6 +11,7 @@
             &_item {
                 color: white;
                 padding-left: 10px;
+                text-align: center;
                 font-family: 'Hind Siliguri', sans-serif;
                 font-size: 33px;
             }
