--- a/style.css
+++ b/style.css
@@ -298,7 +298,6 @@ nav .inner ul li a:hover {
 .about {
   width: 100%;
   height: 60vh;
-  margin-top: 10%;
 }
 .about__container {
   width: 65%;
@@ -312,6 +311,7 @@ nav .inner ul li a:hover {
 .about__container__title_item {
   color: white;
   padding-left: 10px;
+  text-align: center;
   font-family: "Hind Siliguri", sans-serif;
   font-size: 33px;
 }
