change about me p tag margin-top

--- a/scss/config/about/_about.scss
+++ b/scss/config/about/_about.scss
@@ -32,6 +32,7 @@
                 height: 90%;
                 padding-top: 20px;
                 & p {
+                    margin-top: 10%;
                     font-size: 15px;
                     line-height: 155%;
                     color: white;
