--- a/style.css
+++ b/style.css
@@ -333,6 +333,7 @@ nav .inner ul li a:hover {
   padding-top: 20px;
 }
 .about__container__main_left p {
+  margin-top: 10%;
   font-size: 15px;
   line-height: 155%;
   color: white;
