--- a/scss/config/contact/_contact.scss
+++ b/scss/config/contact/_contact.scss
@@ -8,5 +8,15 @@
         height: 100%;
         margin: 0 auto;
         background-color: aqua;
+        &__area {
+            width: 100%;
+            height: 20%;
+            &_article {
+                font-size: 1.3rem;
+                color: white;
+                margin-top: 3%;
+                text-align: center;
+            }
+        }
     }
 }
