--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ nav .inner ul li a:hover {
 }
 .skills__container__statearea {
   width: 95%;
-  margin: 3% auto;
+  margin: 5% auto;
   border: 1px dotted white;
 }
 .skills__container__statearea_item {
@@ -529,6 +529,16 @@ nav .inner ul li a:hover {
   height: 100%;
   margin: 0 auto;
   background-color: aqua;
+}
+.contact__container__area {
+  width: 100%;
+  height: 20%;
+}
+.contact__container__area_article {
+  font-size: 1.3rem;
+  color: white;
+  margin-top: 3%;
+  text-align: center;
 }
 
 .footer {
