change contact button

--- a/scss/config/contact/_contact.scss
+++ b/scss/config/contact/_contact.scss
@@ -14,8 +14,11 @@
             &_article {
                 font-size: 1.3rem;
                 color: white;
-                margin-top: 3%;
+                margin-top: 5%;
                 text-align: center;
+            }
+            &_button {
+                margin: 5% auto;
             }
         }
     }
