--- a/scss/config/contact/_contact.scss
+++ b/scss/config/contact/_contact.scss
@@ -1,24 +1,32 @@
 .contact {
     width: 100%;
-    height: 50vh;
+    height: 40vh;
     margin-top: 4%;
-    background-color: antiquewhite;
     &__container {
         width: 65%;
         height: 100%;
         margin: 0 auto;
-        background-color: aqua;
         &__area {
             width: 100%;
             height: 20%;
             &_article {
                 font-size: 1.3rem;
                 color: white;
-                margin-top: 5%;
+                margin-top: 10%;
                 text-align: center;
             }
             &_button {
                 margin: 5% auto;
+            }
+            &_sns {
+                width: 40%;
+                height: 20%;
+                margin: 0 auto;
+                &_item {
+                    margin: 0 auto;
+                    width: 10%;
+                    color: white;
+                }
             }
         }
     }
