--- a/style.css
+++ b/style.css
@@ -520,15 +520,13 @@ nav .inner ul li a:hover {
 
 .contact {
   width: 100%;
-  height: 50vh;
+  height: 40vh;
   margin-top: 4%;
-  background-color: antiquewhite;
 }
 .contact__container {
   width: 65%;
   height: 100%;
   margin: 0 auto;
-  background-color: aqua;
 }
 .contact__container__area {
   width: 100%;
@@ -537,11 +535,21 @@ nav .inner ul li a:hover {
 .contact__container__area_article {
   font-size: 1.3rem;
   color: white;
-  margin-top: 5%;
+  margin-top: 10%;
   text-align: center;
 }
 .contact__container__area_button {
   margin: 5% auto;
+}
+.contact__container__area_sns {
+  width: 40%;
+  height: 20%;
+  margin: 0 auto;
+}
+.contact__container__area_sns_item {
+  margin: 0 auto;
+  width: 10%;
+  color: white;
 }
 
 .footer {
