--- a/scss/config/footer/_footer.scss
+++ b/scss/config/footer/_footer.scss
@@ -1,11 +1,21 @@
 .footer {
     width: 100%;
-    margin-top: 4%;
-    background-color: antiquewhite;
+    height: 500px;
+    text-align: center;
     &__container {
-        width: 65%;
+        width: 100%;
         height: 100%;
         margin: 0 auto;
-        background-color: aqua;
+        &__pagetopbtn {
+            width: 100px;
+            height: 100px;
+            background-color: white;
+            & p {
+                color: white;
+            }
+        }
+        &__namearea {
+            color: rgb(61, 61, 61);
+        }
     }
 }
