--- a/style.css
+++ b/style.css
@@ -520,7 +520,7 @@ nav .inner ul li a:hover {
 
 .contact {
   width: 100%;
-  height: 40vh;
+  height: 60vh;
   margin-top: 4%;
 }
 .contact__container {
@@ -554,14 +554,24 @@ nav .inner ul li a:hover {
 
 .footer {
   width: 100%;
-  margin-top: 4%;
-  background-color: antiquewhite;
+  height: 500px;
+  text-align: center;
 }
 .footer__container {
-  width: 65%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
-  background-color: aqua;
+}
+.footer__container__pagetopbtn {
+  width: 100px;
+  height: 100px;
+  background-color: white;
+}
+.footer__container__pagetopbtn p {
+  color: white;
+}
+.footer__container__namearea {
+  color: rgb(61, 61, 61);
 }
 
 body {
