--- a/scss/config/work/_work.scss
+++ b/scss/config/work/_work.scss
@@ -17,6 +17,19 @@
                 height: 30%;
                 background-color: rgb(85, 70, 49);
                 display: flex;
+                justify-content: space-around;
+                &__left {
+                    width: 45%;
+                    background-color: aqua;
+                    &_img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+                &__right {
+                    width: 45%;
+                    background-color: rgb(40, 35, 28);
+                }
             }
         }
     }
