--- a/style.css
+++ b/style.css
@@ -509,6 +509,19 @@ nav .inner ul li a:hover {
   height: 30%;
   background-color: rgb(85, 70, 49);
   display: flex;
+  justify-content: space-around;
+}
+.work__container__area__item__left {
+  width: 45%;
+  background-color: aqua;
+}
+.work__container__area__item__left_img {
+  width: 100%;
+  height: 100%;
+}
+.work__container__area__item__right {
+  width: 45%;
+  background-color: rgb(40, 35, 28);
 }
 
 .contact {
