--- a/scss/config/work/_work.scss
+++ b/scss/config/work/_work.scss
@@ -15,7 +15,8 @@
             &__item {
                 width: 100%;
                 height: 30%;
-                background-color: rgb(85, 70, 49);
+                margin-top: 5%;
+                background-color: rgba(12, 24, 255, 0.456);
                 display: flex;
                 justify-content: space-around;
                 &__left {
@@ -24,11 +25,34 @@
                     &_img {
                         width: 100%;
                         height: 100%;
+                        margin: 0 auto;
                     }
                 }
                 &__right {
                     width: 45%;
                     background-color: rgb(40, 35, 28);
+                    &_title {
+                        display: block;
+                        width: 100%;
+                        height: 12%;
+                        font-size: 1.3rem;
+                        color: white;
+                    }
+                    &_article {
+                        display: block;
+                        width: 90%;
+                        height: 45%;
+                        margin-top: 10%;
+                        color: white;
+                    }
+                    &_lang {
+                        width: 100%;
+                        height: 10%;
+                        background-color: antiquewhite;
+                        &_item {
+                            color: white;
+                        }
+                    }
                 }
             }
         }
