--- a/style.css
+++ b/style.css
@@ -507,7 +507,8 @@ nav .inner ul li a:hover {
 .work__container__area__item {
   width: 100%;
   height: 30%;
-  background-color: rgb(85, 70, 49);
+  margin-top: 5%;
+  background-color: rgba(12, 24, 255, 0.456);
   display: flex;
   justify-content: space-around;
 }
@@ -518,10 +519,33 @@ nav .inner ul li a:hover {
 .work__container__area__item__left_img {
   width: 100%;
   height: 100%;
+  margin: 0 auto;
 }
 .work__container__area__item__right {
   width: 45%;
   background-color: rgb(40, 35, 28);
+}
+.work__container__area__item__right_title {
+  display: block;
+  width: 100%;
+  height: 12%;
+  font-size: 1.3rem;
+  color: white;
+}
+.work__container__area__item__right_article {
+  display: block;
+  width: 90%;
+  height: 45%;
+  margin-top: 10%;
+  color: white;
+}
+.work__container__area__item__right_lang {
+  width: 100%;
+  height: 10%;
+  background-color: antiquewhite;
+}
+.work__container__area__item__right_lang_item {
+  color: white;
 }
 
 .contact {
