--- a/scss/config/work/_work.scss
+++ b/scss/config/work/_work.scss
@@ -1,6 +1,6 @@
 .work {
     width: 100%;
-    height: 150vh;
+    height: 155vh;
     margin-top: 4%;
     background-color: antiquewhite;
     &__container {
@@ -49,6 +49,7 @@
                         width: 100%;
                         height: 10%;
                         background-color: antiquewhite;
+                        margin-top: 5%;
                         &_item {
                             color: white;
                         }
