--- a/style.css
+++ b/style.css
@@ -489,7 +489,7 @@ nav .inner ul li a:hover {
 }
 .work {
   width: 100%;
-  height: 150vh;
+  height: 155vh;
   margin-top: 4%;
   background-color: antiquewhite;
 }
@@ -543,6 +543,7 @@ nav .inner ul li a:hover {
   width: 100%;
   height: 10%;
   background-color: antiquewhite;
+  margin-top: 5%;
 }
 .work__container__area__item__right_lang_item {
   color: white;
