--- a/scss/config/work/_work.scss
+++ b/scss/config/work/_work.scss
@@ -1,11 +1,14 @@
 .work {
     width: 100%;
     height: 155vh;
-    margin-top: 4%;
+    margin-top: 10%;
     &__container {
         width: 70%;
         height: 100%;
         margin: 2% auto;
+        &__title {
+            color: white;
+        }
         &__area {
             width: 100%;
             height: 140vh;
@@ -19,7 +22,7 @@
                     width: 45%;
                     &_img {
                         width: 100%;
-                        height: 100%;
+                        height: 90%;
                         margin: 0 auto;
                     }
                 }
