--- a/style.css
+++ b/style.css
@@ -490,12 +490,15 @@ nav .inner ul li a:hover {
 .work {
   width: 100%;
   height: 155vh;
-  margin-top: 4%;
+  margin-top: 10%;
 }
 .work__container {
   width: 70%;
   height: 100%;
   margin: 2% auto;
+}
+.work__container__title {
+  color: white;
 }
 .work__container__area {
   width: 100%;
@@ -513,7 +516,7 @@ nav .inner ul li a:hover {
 }
 .work__container__area__item__left_img {
   width: 100%;
-  height: 100%;
+  height: 90%;
   margin: 0 auto;
 }
 .work__container__area__item__right {
