--- a/scss/config/experience/_experience.scss
+++ b/scss/config/experience/_experience.scss
@@ -1,12 +1,54 @@
 .experience {
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     margin-top: 7%;
-    background-color: antiquewhite;
+    margin-bottom: 9%;
     &__container {
         width: 65%;
         height: 100%;
         margin: 0 auto;
-        background-color: aqua;
+        &__title {
+            text-align: left;
+        }
+        &__area {
+            width: 100%;
+            height: 80%;
+            display: flex;
+            margin-top: 5%;
+            justify-content: space-around;
+            &__left {
+                width: 45%;
+                height: 100%;
+                border: 1px solid white;
+                &__title {
+                    font-size: 1.4rem;
+                    color: white;
+                    text-align: center;
+                }
+                &__article {
+                    display: block;
+                    width: 95%;
+                    margin: 3% auto;
+                    font-size: 1rem;
+                    color: white;
+                    text-align: center;
+                }
+            }
+            &__right {
+                width: 45%;
+                height: 100%;
+                border: 1px solid white;
+                &__title {
+                    font-size: 1.4rem;
+                    color: white;
+                    text-align: center;
+                }
+                &__article {
+                    font-size: 1rem;
+                    color: white;
+                    text-align: center;
+                }
+            }
+        }
     }
 }
